--- a/WebContent/base.xhtml
+++ b/WebContent/base.xhtml
@@ -66,8 +66,6 @@
 					</a></li>
 
 
-
-
 				</ul>
 
 			</div>
@@ -86,15 +84,59 @@
 				<h1>Logar na sua conta</h1>
 				<br />
 				<form>
-					<input type="text" name="user" placeholder="Usuário" /> <input
-						type="password" name="pass" placeholder="Senha" /> <input
+					<input type="text" name="login" placeholder="Login" /> <input
+						type="password" name="senha" placeholder="Senha" /> <input
 						type="submit" name="login" class="login loginmodal-submit"
 						value="Login" />
 				</form>
 
 				<div class="login-help">
-					<a href="#">Cadastrar</a> - <a href="#">Esqueci a senha!</a>
+					<a href="#" data-toggle="modal" data-target="#register-modal">Cadastrar</a>
+					- <a href="#">Esqueci a senha!</a>
 				</div>
+			</div>
+		</div>
+	</div>
+
+
+
+
+	<div class="modal fade" id="register-modal" tabindex="-1" role="dialog"
+		aria-labelledby="myModalLabel" aria-hidden="true"
+		style="display: none;">
+		<div class="modal-dialog">
+			<div class="loginmodal-container">
+				<h1>Cadastrar conta</h1>
+				<br />
+				<form method="post" action="cadastrarCliente">
+					<input type="text" name="login" placeholder="Login" /> <input
+						type="password" name="senha" placeholder="Senha" /> <input
+						type="text" name="nome" placeholder="Nome" /> <input type="text"
+						name="telefone" placeholder="Telefone" /> <input type="text"
+						name="email" placeholder="E-mail" /> <input type="submit"
+						name="register" class="register loginmodal-submit"
+						value="Cadastrar" data-toggle="modal" data-target="#myModal" />
+				</form>
+
+			</div>
+		</div>
+	</div>
+
+
+
+	<div class="modal fade success-popup" id="myModal" tabindex="-1"
+		role="dialog" aria-labelledby="myModalLabel">
+		<div class="modal-dialog modal-sm" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal"
+						aria-label="Close">
+						<span aria-hidden="true">×</span>
+					</button>
+					<h4 class="modal-title" id="myModalLabel">Cadastro realizado!</h4>
+				</div>
+				
+
 			</div>
 		</div>
 	</div>
@@ -235,43 +277,43 @@
 			</div>
 		</div>
 	</div>
-	
-	
-	
-	
+
+
+
+
 	<div id="content">
-			<ui:insert name="content">Content</ui:insert>
-		</div>
-	
-	
-	
-	
-	
-	
-		<div class="footer">
-			<div class="container">
+		<ui:insert name="content">Content</ui:insert>
+	</div>
 
-				<div class="pull-right">
 
-					<div class="btn-toolbar" role="toolbar" aria-label="...">
-						<a class="btn btn-social-icon btn-twitter"> <i
-							class="fa fa-twitter"></i>
-						</a> <a class="btn btn-social-icon btn-facebook"> <i
-							class="fa fa-facebook"></i>
-						</a> <a class="btn btn-social-icon btn-google-plus"> <i
-							class="fa fa-google-plus"></i>
-						</a> <a class="btn btn-social-icon btn-github"> <i
-							class="fa fa-github"></i>
-						</a>
 
-					</div>
+
+
+
+	<div class="footer">
+		<div class="container">
+
+			<div class="pull-right">
+
+				<div class="btn-toolbar" role="toolbar" aria-label="...">
+					<a class="btn btn-social-icon btn-twitter"> <i
+						class="fa fa-twitter"></i>
+					</a> <a class="btn btn-social-icon btn-facebook"> <i
+						class="fa fa-facebook"></i>
+					</a> <a class="btn btn-social-icon btn-google-plus"> <i
+						class="fa fa-google-plus"></i>
+					</a> <a class="btn btn-social-icon btn-github"> <i
+						class="fa fa-github"></i>
+					</a>
+
 				</div>
-				<span class="copyright">© Copyright 2017 Sua Loja S.A.</span>
-
 			</div>
+			<span class="copyright">© Copyright 2017 Sua Loja S.A.</span>
+
 		</div>
-	
-	
+	</div>
+
+
 
 
 </h:body>
