--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -335,7 +335,7 @@
 						<div class="col-md-4">
 							<div class="well well-white">
 
-								<a href="/Ecommerce/categoria.html"> <img
+								<a href="/Ecommerce/categoria.xhtml"> <img
 									alt="R Programming" class="center-block l-b-margin img-circle "
 									height="100" src="img/carrinho.png" width="100" />
 								</a>
