Acesso com login
Alterações para que login fosse possível

--- a/WebContent/base.xhtml
+++ b/WebContent/base.xhtml
@@ -83,7 +83,7 @@
 			<div class="loginmodal-container">
 				<h1>Logar na sua conta</h1>
 				<br />
-				<form>
+				<form method="post" action="logarCliente">
 					<input type="text" name="login" placeholder="Login" /> <input
 						type="password" name="senha" placeholder="Senha" /> <input
 						type="submit" name="login" class="login loginmodal-submit"
@@ -225,7 +225,7 @@
 											</div>
 											<div class="col-xs-3">
 												<button type="button"
-													class="btn btn-default btn-sm btn-block">Atualizar carrinho</button>
+													class="btn btn-default btn-sm btn-block">Atualizar</button>
 											</div>
 										</div>
 									</div>
