--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -20,8 +20,8 @@
 		<header class="jumbotron" id="overview">
 		<div class="container">
 			<h1>Minha Loja</h1>
-			<p class="lead">Informações gerais sobre sua loja online</p>
-			<p class="lead">Aqui você pode adicionar uma imagem</p>
+			<p class="lead">Seja bem-vindo a nossa loja!!!</p>
+			<p class="lead">Aqui os preços são mais baixos!!!</p>
 			<div id="carbonads-container">
 				<div class="carbonad"></div>
 			</div>
